# perth

./: .gitignore  Cargo.toml  Justfile  README.md
crates/perth/: Cargo.toml  README.md
crates/perth-data/: Cargo.toml  README.md
crates/perth-data/examples/: edgar_filings_demo.rs  edgar_fundamentals_demo.rs  edgar_xbrl_example.rs
crates/perth-data/src/: error.rs  lib.rs
crates/perth-data/src/cache/: mod.rs  sqlite.rs
crates/perth-data/src/edgar/: XBRL_README.md  client.rs  filings.rs  fundamentals.rs  mod.rs  xbrl.rs
crates/perth-data/src/yahoo/: fundamentals.rs  mod.rs  quotes.rs
crates/perth-data/tests/: xbrl_parsing_test.rs
crates/perth-factors/: Cargo.toml  README.md
crates/perth-factors/examples/: factor_registry_demo.rs
crates/perth-factors/src/: lib.rs  registry.rs
crates/perth-factors/src/growth/: composite.rs  earnings_growth.rs  mod.rs  sales_growth.rs
crates/perth-factors/src/liquidity/: amihud.rs  composite.rs  mod.rs  turnover.rs
crates/perth-factors/src/momentum/: composite.rs  long_term.rs  medium_term.rs  mod.rs  short_term.rs
crates/perth-factors/src/quality/: composite.rs  leverage.rs  mod.rs  roe.rs
crates/perth-factors/src/size/: log_market_cap.rs  mod.rs
crates/perth-factors/src/value/: book_to_price.rs  composite.rs  earnings_yield.rs  mod.rs
crates/perth-factors/src/volatility/: beta.rs  composite.rs  historical_vol.rs  idio_vol.rs  mod.rs
crates/perth-output/: API_REFERENCE.md  ATTRIBUTION_SUMMARY.md  Cargo.toml  README.md
crates/perth-output/examples/: attribution_demo.rs  export_demo.rs
crates/perth-output/src/: attribution.rs  export.rs  lib.rs  report.rs  summary.rs
crates/perth-output/tests/: integration_test.rs
crates/perth-risk/: Cargo.toml  README.md
crates/perth-risk/examples/: risk_model_demo.rs
crates/perth-risk/src/: lib.rs  model.rs
crates/perth-risk/src/covariance/: ewma.rs  ledoit_wolf.rs  mod.rs  newey_west.rs  regime.rs  utils.rs
crates/perth-risk/src/specific_risk/: bayesian.rs  estimate.rs  mod.rs
crates/perth/src/: lib.rs
crates/perth/src/universe/: gics.rs  mod.rs  sp500.rs
