[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
homepage = "https://github.com/factordynamics/perth"
repository = "https://github.com/factordynamics/perth"
authors = ["Factor Dynamics"]
keywords = ["factor-model", "quantitative-finance", "equity", "risk-model"]
categories = ["finance", "mathematics", "science"]

[workspace]
resolver = "2"
members = ["crates/*", "bin"]
default-members = ["bin"]

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
missing-const-for-fn = "warn"
use-self = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "symbols"
panic = "unwind"
codegen-units = 16

[workspace.dependencies]
# Internal crates
perth-bin = { version = "0.1.0", path = "bin" }
perth-data = { version = "0.1.0", path = "crates/perth-data" }
perth-risk = { version = "0.1.0", path = "crates/perth-risk" }
perth-output = { version = "0.1.0", path = "crates/perth-output" }
perth = { version = "0.1.0", path = "crates/perth", default-features = false }

# Factor computation
factors = "0.2"

# Toraniko dependencies from crates.io
toraniko-math = "0.2"
toraniko-utils = "0.2"
toraniko-model = "0.2"
toraniko-traits = "0.2"
toraniko-primitives = "0.2"
toraniko = { version = "0.2", default-features = false, features = ["full"] }

# DataFrames
polars = { version = "0.46", default-features = false, features = ["lazy", "dtype-date", "dtype-datetime", "streaming", "rank", "rolling_window"] }

# Linear algebra
ndarray = { version = "0.16", features = ["rayon"] }

# Error handling
thiserror = "2.0"

# Utilities
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
derive_more = { version = "2.1", features = ["display", "from", "into"] }

# Testing
rand = "0.8"
approx = "0.5"
rstest = "0.26"
criterion = { version = "0.8", features = ["html_reports"] }

# Async runtime and HTTP
time = "0.3"
futures = "0.3"
yahoo_finance_api = "4.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Database
rusqlite = { version = "0.38", features = ["bundled"] }

# XML parsing for EDGAR
quick-xml = "0.38"

# CSV serialization
csv = "1.4"

# CLI
indicatif = "0.18"
clap = { version = "4", features = ["derive"] }

# Filesystem utilities
dirs = "6.0"
