[package]
name = "perth-output"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
description = "Output and reporting for Perth factor model"

[package.metadata.cargo-udeps.ignore]
normal = ["polars"]
development = ["rstest"]

[lints]
workspace = true

[dependencies]
polars.workspace = true
thiserror.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
csv.workspace = true

[dev-dependencies]
rstest.workspace = true
