[package]
name = "perth-risk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
description = "Risk model for Perth factor model"

[package.metadata.cargo-udeps.ignore]
normal = ["chrono", "polars", "toraniko-math", "toraniko-traits"]
development = ["rstest"]

[lints]
workspace = true

[dependencies]
serde.workspace = true
chrono.workspace = true
polars.workspace = true
ndarray.workspace = true
thiserror.workspace = true
toraniko-math.workspace = true
toraniko-traits.workspace = true

[dev-dependencies]
rstest.workspace = true
approx.workspace = true
